package _04_pakiety._01_przestrzenie_nazw_i_pakiety.code.admin;

public record User(String username) {
}

